fixed navigation links display for the badass ladies